# Domyntrix-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  evaluate.py  evaluate_live.py  feature_extractions.py  generate_test_data.py  main.py  ml_pool.py  models.py  pyproject.toml  start.sh  test_eval_data.csv  test_whitelist_engine.py  whitelist_engine.py  xai_translator.py
extension/: dashboard.html  dashboard.js  index.html  manifest.json  options.html  options.js  package.json  pnpm-lock.yaml  script.js
extension/tests/: dashboard.test.js  script.test.js  setup.js
migrations/: env.py
migrations/versions/: 7873c5dca357_initial_migration.py  edbc92bc7cc9_add_user_whitelist_blacklist.py  f82676780691_add_features_explanations_to_scanrecord.py
tests/backend/: test_feature_extractions.py  test_main.py  test_whitelist_engine.py  test_xai_translator.py
