[project]
name = "madonna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "dnspython>=2.8.0",
    "fastapi>=0.129.0",
    "gensim>=4.4.0",
    "geoip2>=5.2.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.4.0",
    "python-whois>=0.9.6",
    "redis>=7.2.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.35",
    "tensorflow>=2.20.0",
    "tldextract>=5.3.1",
    "uvicorn>=0.41.0",
]
